Simpler dissertation .gitignore

--- a/dissertation/.gitignore
+++ b/dissertation/.gitignore
@@ -1,14 +1,11 @@
-diss.aux
+*.aux
+*.dvi
+*.ps
+*.pdf
+*.log
 diss.bbl
 diss.blg
-diss.dvi
 diss.lof
-diss.log
-diss.ps
 diss.toc
 makefile.txt
-propbody.aux
-proposal.aux
-proposal.dvi
-proposal.log
 
