--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/lombok.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.10.jar"/>
-	<classpathentry kind="lib" path="lib/asmdex-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/smali-1.4.1-dev.jar"/>
+	<classpathentry kind="lib" path="lib/docking-frames-core.jar"/>
+	<classpathentry kind="lib" path="lib/WebLookAndFeel.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
