--- a/build.xml
+++ b/build.xml
@@ -24,7 +24,7 @@
 		<mkdir dir="${classes.dir}"/>
 		<javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath" debug="yes" includeantruntime="false"/>
 		<copy todir="${classes.dir}">
-			<fileset dir="${res.dir}"/>
+			<fileset dir="${src.dir}" excludes="**/*.java" />
 		</copy>
 	</target>
 
