--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 	<classpathentry kind="lib" path="lib/lombok.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.10.jar"/>
 	<classpathentry kind="lib" path="lib/smali-1.4.1-dev.jar"/>
-	<classpathentry kind="lib" path="lib/WebLookAndFeel.jar"/>
+	<classpathentry kind="lib" path="lib/WebLookAndFeel-1.4-dev.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
