--- a/build.xml
+++ b/build.xml
@@ -11,6 +11,7 @@
 	<property name="src_test.dir"      value="test"/>
 	<property name="res.dir"           value="res"/>
 	<property name="examples.dir"      value="examples"/>
+	<property name="merges.dir"        value="merges"/>
 	<property name="build.dir"         value="build"/>
 	<property name="classes.dir"       value="${build.dir}/classes"/>
 	<property name="classes_test.dir"  value="${build.dir}/tests"/>
@@ -19,7 +20,7 @@
 	<property name="lib.dir"           value="lib"/>
 	<property name="main-class"        value="uk.ac.cam.db538.dexter.gui.MainWindow"/>
 	<property name="merges.pkg"        value="uk/ac/cam/db538/dexter/merge"/>
-	<property name="merges.dir"        value="${build.dir}/merges"/>
+	<property name="merges-build.dir"  value="${build.dir}/merges"/>
 
 	<path id="classpath">
 		<fileset dir="${lib.dir}" includes="**/*.jar"/>
@@ -34,24 +35,28 @@
 		<mkdir dir="${classes.dir}"/>
 		<javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath" debug="yes" includeantruntime="false"/>
 
-		<fileset id="merge-classes" dir="${merges.dir}">
-			<include name="**/*.class" />
-		</fileset>
-		<pathconvert property="merges-list" refid="merge-classes" pathsep=" " />
-
-		<java jar="${lib.dir}/dx.jar" fork="yes">
-                        <arg value="--dex"/>
-                        <arg value="--output=${classes.dir}/${merges.pkg}/classes.dex" />
-			<arg line="${merges.dir}" />
-		</java>
 		<copy todir="${classes.dir}">
 			<fileset dir="${src.dir}" excludes="**/*.java" />
+			<fileset dir="${merges.dir}" />
 		</copy>
 	</target>
 
 	<target name="compile-merges">
 		<mkdir dir="${merges.dir}"/>
-		<javac srcdir="${src.dir}/${merges.pkg}" destdir="${merges.dir}" includeantruntime="false" target="1.6" source="1.6"/>
+		<mkdir dir="${merges-build.dir}"/>
+			
+		<javac srcdir="${src.dir}/${merges.pkg}" destdir="${merges-build.dir}" includeantruntime="false" target="1.6" source="1.6"/>
+
+    <fileset id="merge-classes" dir="${merges-build.dir}">
+      <include name="**/*.class" />
+    </fileset>
+    <pathconvert property="merges-list" refid="merge-classes" pathsep=" " />
+
+    <java jar="${lib.dir}/dx.jar" fork="yes">
+                        <arg value="--dex"/>
+                        <arg value="--output=${merges.dir}/merge-classes.dex" />
+      <arg line="${merges-build.dir}" />
+    </java>
 	</target>
 
 	<target name="compile-test" depends="compile">
@@ -62,7 +67,7 @@
 				<pathelement location="${classes.dir}"/>
 			</classpath>
 		</javac>
-  	</target>
+	</target>
 
 	<target name="jar" depends="compile">
 		<mkdir dir="${jar.dir}"/>
