--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="lib" path="lib/zeus-jscl-1.70.jar"/>
 	<classpathentry kind="lib" path="lib/bcel-6.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/smali-1.4.2.jar" sourcepath="/home/db538/devel/smali/dexlib/src"/>
+	<classpathentry kind="lib" path="lib/zip4j_1.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
