--- a/.classpath
+++ b/.classpath
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="main/java/|test/java/" kind="src" path="src"/>
+	<classpathentry excluding="main/java/|test/java/|com/rx201/dx/translator/Translator.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="merges"/>
+	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/lombok.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.10.jar"/>
 	<classpathentry kind="lib" path="lib/WebLookAndFeel-1.4-dev.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar"/>
 	<classpathentry kind="lib" path="lib/zeus-jscl-1.70.jar"/>
-	<classpathentry kind="lib" path="lib/smali-1.4.2.jar" sourcepath="/home/db538/devel/smali/dexlib/src"/>
+	<classpathentry kind="lib" path="lib/smali-1.4.2.jar" sourcepath="C:/Users/rx201/projects/TaintAPK/smali/dexlib/src/main/java"/>
 	<classpathentry kind="lib" path="lib/zip4j_1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/bcel-6.0-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
