fix a subtle diff bug where line diffs can be stripped unintentionally.

--- a/cg_test/Makefile
+++ b/cg_test/Makefile
@@ -30,7 +30,7 @@ JAVA_FILES := $(shell find . -name '*.java')
 CLASS_FILES := $(JAVA_FILES:.java=.class)
 
 diff: test.out test.apk_new.out
-	-@diff --side-by-side -r $^ | grep -v '^ *\.line' | grep -v '^ *\.prologue'| grep -v '^ *\.parameter'
+	-@diff -b --side-by-side -r $^ || true
 
 test.apk_new.apk : test.apk
 	$(DEXTER) $<
@@ -51,6 +51,7 @@ classes.dex: $(CLASS_FILES)
 %.out: %.apk
 	rm -rf $@
 	$(APKTOOL) d $< $@/
+	find $@/ -name '*.smali' -exec sed -i '/^ *\.\(line\|prologue\|parameter\)/d' {} \;
 	
 distclean: clean
 	@find . -name '*.class' -exec rm {} \;
