linux support of makefile

--- a/cg_test/Makefile
+++ b/cg_test/Makefile
@@ -2,8 +2,15 @@ TOP := $(dir $(lastword $(MAKEFILE_LIST)))
 include $(TOP)/path_config
 
 JAVAC_FLAGS := -source 1.5 -target 1.5
-CWD := $(shell cygpath -a -m .)
-PROJECET_ROOT := $(shell cygpath -a -m $(TOP)/../)
+
+ifeq ($(shell uname -o), Cygwin)
+    CWD := $(shell cygpath -a -m .)
+    PROJECET_ROOT := $(shell cygpath -a -m $(TOP)/../)
+else
+    CWD := $(shell realpath .)
+    PROJECET_ROOT := $(shell realpath  $(TOP)/../)
+endif
+
 DEXTER := $(JAVA) -ea -classpath '$(PROJECET_ROOT)/bin/;$(PROJECET_ROOT)/lib/*' uk.ac.cam.db538.dexter.MainConsole $(PROJECET_ROOT)/framework-2.3-lite
 #DXFLAGS := --no-optimize
 
