--- a/android-gui/Dexter/src/main/AndroidManifest.xml
+++ b/android-gui/Dexter/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="uk.ac.cam.db538.dexter.MainActivity"
+            android:name=".PackagesActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
