--- a/android-gui/Dexter/src/main/AndroidManifest.xml
+++ b/android-gui/Dexter/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="9"
+        android:minSdkVersion="11"
         android:targetSdkVersion="16" />
 
     <application
@@ -14,13 +14,21 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".PackagesActivity"
+            android:name="uk.ac.cam.db538.dexter.PackageListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="uk.ac.cam.db538.dexter.PackageDetailActivity"
+            android:label="@string/title_package_detail"
+            android:parentActivityName=".PackageListActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".PackageListActivity" />
         </activity>
     </application>
 
