--- a/.classpath
+++ b/.classpath
@@ -3,11 +3,11 @@
 	<classpathentry excluding="main/java/|test/java/|com/rx201/dx/translator/Translator.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="merges"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/lombok.jar"/>
 	<classpathentry kind="lib" path="lib/smali-1.4.2.jar" sourcepath="C:/Users/rx201/projects/TaintAPK/smali/dexlib/src/main/java"/>
 	<classpathentry kind="lib" path="lib/zip4j_1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="lib/dx.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
