Creates a standalone jar

--- a/gui-java/.classpath
+++ b/gui-java/.classpath
@@ -6,8 +6,8 @@
 	<classpathentry kind="lib" path="lib/WebLookAndFeel-1.4-dev.jar"/>
 	<classpathentry kind="lib" path="lib/zeus-jscl-1.70.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/dexter"/>
-	<classpathentry kind="lib" path="/dexter/lib/smali-1.4.2.jar" sourcepath="/dexter/C:/Users/rx201/projects/TaintAPK/smali/dexlib/src/main/java"/>
 	<classpathentry kind="lib" path="/dexter/lib/lombok.jar"/>
 	<classpathentry kind="lib" path="/dexter/lib/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="/dexter/lib/smali.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
