--- a/.classpath
+++ b/.classpath
@@ -4,10 +4,10 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="merges"/>
 	<classpathentry kind="lib" path="lib/lombok.jar"/>
-	<classpathentry kind="lib" path="lib/smali-1.4.2.jar" sourcepath="C:/Users/rx201/projects/TaintAPK/smali/dexlib/src/main/java"/>
-	<classpathentry kind="lib" path="lib/zip4j_1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="lib/dx.jar"/>
+	<classpathentry kind="lib" path="lib/smali.jar"/>
+	<classpathentry kind="lib" path="lib/zip4j.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
