--- a/build.xml
+++ b/build.xml
@@ -16,12 +16,13 @@
 	<property name="classes.dir"       value="${build.dir}/classes"/>
 	<property name="classes_test.dir"  value="${build.dir}/tests"/>
 	<property name="jar.dir"           value="${build.dir}/jar"/>
+	<property name="jar.file"          value="${jar.dir}/${ant.project.name}.jar"/>
 	<property name="dex.dir"           value="${build.dir}/example_dex"/>
 	<property name="lib.dir"           value="lib"/>
 	<property name="main-class"        value="uk.ac.cam.db538.dexter.MainConsole"/>
 	<property name="merges.pkg"        value="uk/ac/cam/db538/dexter/merge"/>
 	<property name="merges-build.dir"  value="${build.dir}/merges"/>
-
+	
 	<path id="classpath">
 		<fileset dir="${lib.dir}" includes="**/*.jar"/>
 	</path>	
@@ -71,13 +72,26 @@
 
 	<target name="jar" depends="compile">
 		<mkdir dir="${jar.dir}"/>
-		<jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
+		<jar destfile="${jar.file}" basedir="${classes.dir}">
 			<manifest>
 				<attribute name="Main-Class" value="${main-class}"/>
 			</manifest>
 		</jar>
 	</target>
 	
+	<target name="uberjar" depends="jar">
+		<jar destfile="${jar.dir}/${ant.project.name}-standalone.jar">
+		    <zipfileset src="${jar.file}" includes="**/*.class,**/*.dex"/>
+			<zipfileset src="${lib.dir}/dx.jar" includes="**/*.class"/>
+	    	<zipfileset src="${lib.dir}/smali.jar" includes="**/*.class"/>
+			<zipfileset src="${lib.dir}/zip4j.jar" includes="**/*.class"/>
+			
+			<manifest>
+				<attribute name="Main-Class" value="${main-class}"/>
+			</manifest>
+		</jar>
+	</target>
+
 	<target name="-compile-example">
 		<mkdir dir="${dex.dir}" />
 		<basename property="filename" file="${example-file}" suffix=".smali" />
