--- a/gui-android/Dexter/src/main/AndroidManifest.xml
+++ b/gui-android/Dexter/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="uk.ac.cam.db538.dexter"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0"
+    android:largeHeap="true">
 
     <uses-sdk
         android:minSdkVersion="11"
