--- a/gui-java/.classpath
+++ b/gui-java/.classpath
@@ -2,12 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/WebLookAndFeel-1.4-dev.jar"/>
 	<classpathentry kind="lib" path="lib/zeus-jscl-1.70.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/dexter"/>
 	<classpathentry kind="lib" path="/dexter/lib/lombok.jar"/>
 	<classpathentry kind="lib" path="/dexter/lib/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="/dexter/lib/smali.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
