--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="main/java/|test/java/|com/rx201/dx/translator/Translator.java" kind="src" path="src"/>
+	<classpathentry excluding="main/java/|test/java/" kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="merges"/>
 	<classpathentry kind="lib" path="lib/lombok.jar"/>
