--- a/gui-android/Dexter/src/main/AndroidManifest.xml
+++ b/gui-android/Dexter/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="16" />
 
     <application
+        android:name="uk.ac.cam.db538.dexter.DexterApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
