Auxiliary DEX loaded without temp file, instrumentation on phone

--- a/build.xml
+++ b/build.xml
@@ -83,8 +83,9 @@
 		<jar destfile="${jar.dir}/${ant.project.name}-standalone.jar">
 		    <zipfileset src="${jar.file}" includes="**/*.class,**/*.dex"/>
 			<zipfileset src="${lib.dir}/dx.jar" includes="**/*.class"/>
-	    	<zipfileset src="${lib.dir}/smali.jar" includes="**/*.class"/>
+			<zipfileset src="${lib.dir}/smali.jar" includes="**/*.class"/>
 			<zipfileset src="${lib.dir}/zip4j.jar" includes="**/*.class"/>
+			<zipfileset src="${lib.dir}/commons-io.jar" includes="**/*.class"/>
 			
 			<manifest>
 				<attribute name="Main-Class" value="${main-class}"/>
